sizing for mobile

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <img src="img/dlm_logo.png" width="15%" class="icenter" alt="DLM TEC logo">
     <br/>
-    <h1 class="tcenter">CREATION SITES STATIQUES ET/OU DYNAMIQUES</h1>
+    <h1 class="tcenter">CREATION DE SITES STATIQUES ET/OU DYNAMIQUES</h1>
     <br/>
-    <h1 class="tcenter"><a href="https://www.dlmtec.com" target="_blank">https://www.dlmtec.com</a></h1>
+    <h1 class="tcenter"><a href="https://www.dlmtec.com" target="_blank">www.dlmtec.com</a></h1>
 </body>
 </html>
