--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <body>
     <img src="img/dlm_logo.png" width="15%" class="icenter" alt="DLM TEC logo">
     <br/>
-    <h1 class="tcenter text-danger">CREATION DE SITES STATIQUES ET/OU DYNAMIQUES</h1>
+    <h1 class="tcenter text-dark">CREATION DE SITES STATIQUES ET/OU DYNAMIQUES</h1>
     <br/>
-    <h1 class="tcenter"><a href="https://www.dlmtec.com" target="_blank">www.dlmtec.com</a></h1>
+    <h1 class="tcenter text-info"><a href="https://www.dlmtec.com" target="_blank">www.dlmtec.com</a></h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script>
+        alert("OKKKAAAYYYYYYY !");
+        console.log('ça marche mon gars !');
+    </script>
 </body>
 </html>
