--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <h1 class="tcenter text-info"><a href="https://www.dlmtec.com" target="_blank">www.dlmtec.com</a></h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
-        alert("OKKKAAAYYYYYYY !");
-        console.log('ça marche mon gars !');
+        console.log("JS okay");
     </script>
 </body>
 </html>
